fixed text align across all screen sizes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,7 +187,7 @@ width: 22%;
 	font-size: 3rem;
 	font-family: 'Open Sans', sans-serif;
 	/*font-weight: 700;*/
-	text-align: left;
+	text-align: center;
 	font-weight: bold;
 	letter-spacing: -2.5px;
 }
@@ -232,13 +232,13 @@ width: 22%;
 		font-size: 3.5rem;
 		font-family: 'Open Sans', sans-serif;
 		/*font-weight: 700;*/
-		text-align: right;
+		text-align: center;
 		font-weight: bold;
 		letter-spacing: -1.5px;
 	}
 
 	.intro-head {
-		text-align: right;
+		text-align: left;
 		letter-spacing: -1px;
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 600px;
